// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components ProtectedRoute redirects to login page if not authenticated 1`] = `
<div>
  Login page
</div>
`;

exports[`components ProtectedRoute renders component if authenticated 1`] = `
<div>
  wrapped
</div>
`;
